--- a/css/custom-widgets.css
+++ b/css/custom-widgets.css
@@ -1,4 +1,4 @@
 /* Mason custom widgets */
 
-/* Default and small screens */
-@import 'custom-widgets-default.css';
+/* Calls-to-action menu */
+@import 'custom-widgets-cta-menu.css';
