Adds new highglight item custom widget.

--- a/css/custom-widgets.css
+++ b/css/custom-widgets.css
@@ -2,3 +2,6 @@
 
 /* Calls-to-action menu */
 @import 'custom-widgets-cta-menu.css';
+
+/* Highlight item */
+@import 'custom-widgets-highlight-item.css';
