--- a/css/custom-widgets-highlight-item.css
+++ b/css/custom-widgets-highlight-item.css
@@ -4,3 +4,6 @@
 
 /* Default and small screens */
 @import 'custom-widgets-highlight-item-default.css';
+
+/* 700+ pixels */
+@import 'custom-widgets-highlight-item-700+.css' screen and (min-width: 700px);
