Adds a new 'project list' custom widget.

--- a/css/admin.css
+++ b/css/admin.css
@@ -1,4 +1,8 @@
 /* Admin styles */
 
+
 /* Widget image select field */
 @import 'admin-widget-field-image-select.css';
+
+/* Project list widget */
+@import 'admin-widget-project-list.css';
