--- a/css/custom-widgets.css
+++ b/css/custom-widgets.css
@@ -5,3 +5,6 @@
 
 /* Highlight item */
 @import 'custom-widgets-highlight-item.css';
+
+/* Project list */
+@import 'custom-widgets-project-list.css';
