--- a/css/custom-widgets-cta-menu-default.css
+++ b/css/custom-widgets-cta-menu-default.css
@@ -12,8 +12,15 @@ li.widget_gmuj_widget_call_to_action_menu h3.widget-title {
 
 /* Style calls-to-action widget sub-title*/
 li.widget_gmuj_widget_call_to_action_menu p.widget-title-sub {
-	margin-top: 0.5em;
+}
+
+ul.sidebar-homepage:not(#sidebar-homepage-banner) li.widget_gmuj_widget_call_to_action_menu p.widget-title-sub, 
+div.entry-content li.widget_gmuj_widget_call_to_action_menu p.widget-title-sub {
+	margin-top: -1em;
 	margin-bottom:2em;
+	text-align:center;
+	font-color:#006633 !important;
+	font-size:1.3em;
 }
 
 
