--- a/css/custom-widgets-cta-menu-500+.css
+++ b/css/custom-widgets-cta-menu-500+.css
@@ -16,6 +16,7 @@
 /* Style calls-to-action widget menu items */
 .widget_gmuj_widget_call_to_action_menu ul li {
 	flex: 1 1 0px;
+	background-position: 125% top;
 }
 
 
