--- a/css/custom-widgets-cta-menu-default.css
+++ b/css/custom-widgets-cta-menu-default.css
@@ -33,6 +33,9 @@ div.entry-content li.widget_gmuj_widget_call_to_action_menu p.widget-title-sub {
 .widget_gmuj_widget_call_to_action_menu ul li {
 	margin: 1em !important;
 	background-color: #063;
+	background-image: url('/wp-content/plugins/gmuj-wordpress-plugin-mason-custom-widgets/images/logo-mason-m-193x204.png');
+	background-repeat: no-repeat;
+	background-position: 125% 20%;
 }
 
 /* Style calls-to-action widget menu item links */
