Simplifies display of highlight item widget.

--- a/css/custom-widgets-highlight-item-500+.css
+++ b/css/custom-widgets-highlight-item-500+.css
@@ -5,22 +5,10 @@
 /* 500+ pixels */
 
 
-/* Style highlight item content wrapper */
-.widget_gmuj_widget_highlight_item div.highlight-item-content-wrapper {
-	display:flex;
-	justify-content: space-between;
-	align-items: flex-start;
-} 
-
-/* Style highlight item content div */
-.widget_gmuj_widget_highlight_item div.highlight-item-content {
-	margin-right:1em;
-} 
-
 /* Style highlight item image */
 .widget_gmuj_widget_highlight_item img.highlight-item-image {
-	max-width: 40%;
-    object-fit: contain;
-    width: auto;
-    height: auto;	
+    float: right;
+    max-width: 40%;
+    margin-left: 1em;
+    margin-right: 0;
 }
