--- a/css/custom-widgets.css
+++ b/css/custom-widgets.css
@@ -6,8 +6,8 @@
 /* Highlight item */
 @import 'custom-widgets-highlight-item.css';
 
-/* Project list */
-@import 'custom-widgets-project-list.css';
+/* Highlight list */
+@import 'custom-widgets-highlight-list.css';
 
 /* Recent posts */
 @import 'custom-widgets-recent-posts.css';
