--- a/css/admin.css
+++ b/css/admin.css
@@ -4,5 +4,5 @@
 /* Widget image select field */
 @import 'admin-widget-field-image-select.css';
 
-/* Project list widget */
-@import 'admin-widget-project-list.css';
+/* Highlight list widget */
+@import 'admin-widget-highlight-list.css';
