--- a/css/custom-widgets-highlight-item-500+.css
+++ b/css/custom-widgets-highlight-item-500+.css
@@ -7,8 +7,19 @@
 
 /* Style highlight item image */
 .widget_gmuj_widget_highlight_item img.highlight-item-image {
-    float: right;
     max-width: 40%;
+}
+
+/* Style highlight item image, if floated right */
+.widget_gmuj_widget_highlight_item img.highlight-item-image-right {
+    float: right;
     margin-left: 1em;
     margin-right: 0;
+}
+
+/* Style highlight item image, if floated left */
+.widget_gmuj_widget_highlight_item img.highlight-item-image-left {
+    float: left;
+    margin-right: 1em;
+    margin-left: 0;
 }
