Modifies margin of highlight list and recent posts item titles.

--- a/css/custom-widgets-highlight-list-default.css
+++ b/css/custom-widgets-highlight-list-default.css
@@ -48,7 +48,7 @@
 /* Style highlight name heading */
 .widget_gmuj_widget_highlight_list h4.highlight-name {
     min-height:2em;
-    margin: 1em auto;
+    margin: 0.5em;
     padding-bottom: 1em;
     font-size:1.1em;
 }
