--- a/css/custom-widgets-recent-posts-700+.css
+++ b/css/custom-widgets-recent-posts-700+.css
@@ -60,7 +60,7 @@ ul#sidebar-homepage-banner li.widget_gmuj_widget_recent_posts p.widget-title-sub
 /* Style highlight name heading */
 .widget_gmuj_widget_recent_posts h4.highlight-name {
     min-height:2em;
-    margin: 1em auto;
+    margin: 0.5em;
     padding-bottom: 1em;
     font-size:1.1em;
 }
