Sets max width on call-to-action menu buttons.

--- a/css/custom-widgets-cta-menu-default.css
+++ b/css/custom-widgets-cta-menu-default.css
@@ -37,6 +37,7 @@ div.entry-content li.widget_gmuj_widget_call_to_action_menu p.widget-title-sub {
 	background-image: url('/wp-content/plugins/gmuj-wordpress-plugin-mason-custom-widgets/images/logo-mason-m-193x204.png');
 	background-repeat: no-repeat;
 	background-position: calc(100% + 3em) 20%;
+	max-width:30em;
 }
 
 /* Style calls-to-action widget menu item links */
