Adds a new 'call-to-action list' custom widget type, which outputs a set of call-to-action-style buttons based on an arbirtary list of items provided in the widget configuration, rather than based on an existing WordPress menu (like the existing call-to-action menu custom widget type). This new custom widget type also allows for selectable button background images.

--- a/css/custom-widgets.css
+++ b/css/custom-widgets.css
@@ -1,5 +1,8 @@
 /* Mason custom widgets */
 
+/* Calls-to-action list */
+@import 'custom-widgets-cta-list.css';
+
 /* Calls-to-action menu */
 @import 'custom-widgets-cta-menu.css';
 
