--- a/css/admin.css
+++ b/css/admin.css
@@ -4,5 +4,8 @@
 /* Widget image select field */
 @import 'admin-widget-field-image-select.css';
 
+/* Calls-to-action list widget */
+@import 'admin-widget-cta-list.css';
+
 /* Highlight list widget */
 @import 'admin-widget-highlight-list.css';
