Adds a subtitle field to the highlighted items widget.

--- a/css/custom-widgets-highlight-list-default.css
+++ b/css/custom-widgets-highlight-list-default.css
@@ -10,6 +10,11 @@
 
 }
 
+/* Style highlight list widget sub-title */
+.widget_gmuj_widget_highlight_list p.widget-title-sub {
+    margin-bottom:2em;
+}
+
 /* Style highlight list container */
 .widget_gmuj_widget_highlight_list .widget_gmuj_widget_highlight_list_grid_container {
     display: grid;
