To reduce redundancy, revises CSS rules and HTML markup relating to the grid/tile display view used by both the highlight list widget and the recent posts widget.

--- a/css/custom-widgets.css
+++ b/css/custom-widgets.css
@@ -1,5 +1,9 @@
 /* Mason custom widgets */
 
+
+/* Shared - display list */
+@import 'custom-widgets-shared-display-list.css';
+
 /* Calls-to-action list */
 @import 'custom-widgets-cta-list.css';
 
