Hides the regex display criteria section on widget edit forms when the widget is within a homepage-specific widget area (because it does not apply).

--- a/css/admin.css
+++ b/css/admin.css
@@ -1,6 +1,9 @@
 /* Admin styles */
 
 
+/* Default admin styles */
+@import 'admin-default.css';
+
 /* Widget image select field */
 @import 'admin-widget-field-image-select.css';
 
