Adds new custom widget: regex nav menu, which extends WP native nav menu widget with our regex display filtering.

--- a/css/custom-widgets.css
+++ b/css/custom-widgets.css
@@ -24,3 +24,6 @@
 
 /* People list */
 @import 'custom-widgets-people-list.css';
+
+/* Regex nav menu */
+@import 'custom-widgets-regex-nav-menu.css';
