--- a/css/custom-widgets-cta-menu-default.css
+++ b/css/custom-widgets-cta-menu-default.css
@@ -21,9 +21,10 @@ div.entry-content li.widget_gmuj_widget_call_to_action_menu p.widget-title-sub {
 .widget_gmuj_widget_call_to_action_menu ul li {
 	margin: 1em !important;
 	background-color: #005239;
-	background-image: url('/wp-content/plugins/gmuj-wordpress-plugin-mason-custom-widgets/images/logo-mason-m-193x204.png');
+	background-image: url('/wp-content/plugins/gmuj-wordpress-plugin-mason-custom-widgets/images/graphic-element-gm.png');
 	background-repeat: no-repeat;
-	background-position: calc(100% + 3em) 20%;
+	background-position: 100% 20%;
+	background-size:contain;
 	max-width:30em;
 }
 
