Per new brand standards, modifies styling for widget display lists.

--- a/css/custom-widgets-shared-display-list-default.css
+++ b/css/custom-widgets-shared-display-list-default.css
@@ -23,10 +23,7 @@ a.widget_gmuj_widget_display_list_item {
     max-width: 255px;
     overflow: hidden;
     position: relative;
-    border-radius: 10px;
-    margin: 0 auto 1em;
     text-decoration: none;
-    padding-bottom:1em;
 }
 
 /* Style display list links on hover */
@@ -39,16 +36,25 @@ a.widget_gmuj_widget_display_list_item:hover {
     display:block !important;
     width: 255px;
     height: 190px;
-    margin-bottom: 1em;
     object-fit: cover;
     object-position: center;
 }
 
 /* Style display list item name heading */
 .widget_gmuj_widget_display_list_grid_container h4.widget_gmuj_widget_display_list_item_name {
-    margin: 1.5em 0.5em 0;
+    position: absolute;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    margin: 0;
+    padding-top: 0.5em;
     padding-bottom: 0.5em;
     font-size:1.2em;
+    color:white;
+    font-weight:500;
+    text-align: left;
+    padding-left: 1em;
+    background-color:rgba(0,0,0,0.5);
 }
 
 /* Style display list item description */
@@ -61,7 +67,7 @@ a.widget_gmuj_widget_display_list_item:hover {
     height: 190px;
     padding: 15px;
     opacity: 0;
-    font-size: 0.9em;
+    font-size: 0.8em;
     line-height: 1.5em;
     text-align: left;
     -webkit-transition: all 500ms;
