--- a/css/custom-widgets-shared-display-list-default.css
+++ b/css/custom-widgets-shared-display-list-default.css
@@ -35,7 +35,7 @@ a.widget_gmuj_widget_display_list_item:hover {
 .widget_gmuj_widget_display_list_item_image {
     display:block !important;
     width: 255px;
-    height: 190px;
+    height: 255px;
     object-fit: cover;
     object-position: center;
 }
@@ -53,8 +53,10 @@ a.widget_gmuj_widget_display_list_item:hover {
     color:white;
     font-weight:500;
     text-align: left;
-    padding-left: 1em;
+    padding-left: 0.5em;
+    padding-right: 0.5em;
     background-color:rgba(0,0,0,0.5);
+    min-height: 3.5em;
 }
 
 /* Style display list item description */
@@ -64,7 +66,7 @@ a.widget_gmuj_widget_display_list_item:hover {
     top: -200px;
     left: 0;
     width: 100%;
-    height: 190px;
+    height: 180px;
     padding: 15px;
     opacity: 0;
     font-size: 0.8em;
