--- a/css/custom-widgets-regex-nav-menu-default.css
+++ b/css/custom-widgets-regex-nav-menu-default.css
@@ -12,13 +12,13 @@
 
 .gmuj-sidebar .widget_gmuj_widget_regex_nav_menu li {
 	min-width: 12em;
-	background-color: #e8fff6;
+	background-color: #f1f2f3;
 	border-bottom: none;
 }
 
 /* Nav menu links  */
 .gmuj-sidebar .widget_gmuj_widget_regex_nav_menu li a {
-	color: #007f8b;
+	color: #005239;
 	font-weight: normal;
 }
 
