Consolidates stylesheets into fewer total stylesheets and enqueues them individually. Ensures that stylesheets are enqueued in such a way as to avoid browser caching in order to prepare for new theme version rollout which includes major branding updates.

--- a/css/admin-widget-field-image-select.css
+++ b/css/admin-widget-field-image-select.css
@@ -3,4 +3,18 @@
 /* Widget image select field */
 
 /* Default and small screens */
-@import 'admin-widget-field-image-select-default.css';
+
+
+/* Style image select field thumbnail (preview) image wrapper */
+.widget-form-img-preview {
+    max-width: 100%; 
+    cursor: pointer;
+}
+
+/* Style image select field thumbnail (preview) image */
+.widget-form-img-preview img {
+    display: block; 
+    max-height: 150px; 
+    margin-left: auto; 
+    margin-right: auto;
+}
