--- a/css/custom-widgets-highlight-list.css
+++ b/css/custom-widgets-highlight-list.css
@@ -2,5 +2,5 @@
 
 /* Highlight list */
 
-/* Default and small screens */
-@import 'custom-widgets-highlight-list-default.css';
+/*--- Default and small screens ---*/
+
