--- a/css/custom-widgets-cta-list.css
+++ b/css/custom-widgets-cta-list.css
@@ -2,14 +2,95 @@
 
 /* Calls-to-action list */
 
-/* Default and small screens */
-@import 'custom-widgets-cta-list-default.css';
+/*--- Default and small screens ---*/
 
-/* 500+ pixels */
-@import 'custom-widgets-cta-list-500+.css' screen and (min-width: 500px);
+/* Style calls-to-action widget sub-titles, other than when used on the homepage banner */
+ul.sidebar-homepage:not(#sidebar-homepage-banner) li.widget_gmuj_widget_cta_list p.widget-title-sub, 
+div.entry-content li.widget_gmuj_widget_cta_list p.widget-title-sub {
+	margin-top: -1em;
+}
 
-/* 700+ pixels */
-@import 'custom-widgets-cta-list-700+.css' screen and (min-width: 700px);
+/* Style calls-to-action widget list */
+.widget_gmuj_widget_cta_list ul {
+	list-style-type: none;
+	margin: 0;
+}
 
-/* 1000+ pixels */
-@import 'custom-widgets-cta-list-1000+.css' screen and (min-width: 1000px);
+/* Style calls-to-action widget list items */
+.widget_gmuj_widget_cta_list ul li {
+	margin: 1em !important;
+	background-color: #005239;
+	/*background-image: url('/wp-content/plugins/gmuj-wordpress-plugin-mason-custom-widgets/images/logo-mason-m-193x204.png');*/
+	background-repeat: no-repeat;
+	background-position: right bottom;
+	max-width:30em;
+}
+
+/* Style calls-to-action widget list item links */
+.widget_gmuj_widget_cta_list ul li a {
+	display: block;
+	padding: 0.5em;
+	word-break: normal;
+	color: white;
+	text-decoration: none;
+	font-weight: bold;
+	font-size:1.25em;
+}
+
+/* Style calls-to-action widget list item link icons */
+.widget_gmuj_widget_cta_list ul li a span.fa {
+	color:#ffc733;
+	font-size:0.8em;
+	margin-left: 0.25em;
+}
+
+/*--- 500+ pixels ---*/
+@media screen and (min-width: 500px) {
+
+	/* Style calls-to-action widget list */
+	.widget_gmuj_widget_cta_list ul {
+		display: flex;
+		justify-content: space-around;
+		align-items: flex-start;
+		flex-wrap: wrap;
+	}
+
+	/* Style calls-to-action widget list items */
+	.widget_gmuj_widget_cta_list ul li {
+		flex: 1 1 0px;
+		/*background-position: calc(100% + 3em) top;*/
+	}
+
+
+	/* Style calls-to-action widget list item links */
+	.widget_gmuj_widget_cta_list ul li a {
+		padding: 0.5em 1em;
+	}
+
+}
+
+/*--- 700+ pixels ---*/
+@media screen and (min-width: 700px) {
+
+	/* Style calls-to-action widget list item links */
+	.widget_gmuj_widget_cta_list ul li a {
+		padding: 0.5em 1em;
+	}
+
+}
+
+/*--- 1000+ pixels ---*/
+@media screen and (min-width: 1000px) {
+
+	/* Style calls-to-action widget list item links */
+	.widget_gmuj_widget_cta_list ul li a {
+		padding: 2em 3em 0.5em 0.5em;
+	}
+
+	/* Style calls-to-action widget sub-titles, other than when used on the homepage banner */
+	ul.sidebar-homepage:not(#sidebar-homepage-banner) li.widget_gmuj_widget_cta_list p.widget-title-sub,
+	div.entry-content li.widget_gmuj_widget_cta_list p.widget-title-sub {
+		margin-bottom:1em;
+	}
+
+}
