--- a/css/custom-widgets-cta-menu.css
+++ b/css/custom-widgets-cta-menu.css
@@ -2,14 +2,95 @@
 
 /* Calls-to-action menu */
 
-/* Default and small screens */
-@import 'custom-widgets-cta-menu-default.css';
+/*--- Default and small screens ---*/
 
-/* 500+ pixels */
-@import 'custom-widgets-cta-menu-500+.css' screen and (min-width: 500px);
+/* Style calls-to-action widget sub-titles, other than when used on the homepage banner */
+ul.sidebar-homepage:not(#sidebar-homepage-banner) li.widget_gmuj_widget_call_to_action_menu p.widget-title-sub, 
+div.entry-content li.widget_gmuj_widget_call_to_action_menu p.widget-title-sub {
+	margin-top: -1em;
+}
 
-/* 700+ pixels */
-@import 'custom-widgets-cta-menu-700+.css' screen and (min-width: 700px);
+/* Style calls-to-action widget menu */
+.widget_gmuj_widget_call_to_action_menu ul {
+	list-style-type: none;
+	margin: 0;
+}
 
-/* 1000+ pixels */
-@import 'custom-widgets-cta-menu-1000+.css' screen and (min-width: 1000px);
+/* Style calls-to-action widget menu items */
+.widget_gmuj_widget_call_to_action_menu ul li {
+	margin: 1em !important;
+	background-color: #005239;
+	background-image: url('/wp-content/plugins/gmuj-wordpress-plugin-mason-custom-widgets/images/graphic-element-gm.png');
+	background-repeat: no-repeat;
+	background-position: 100% 20%;
+	background-size:contain;
+	max-width:30em;
+}
+
+/* Style calls-to-action widget menu item links */
+.widget_gmuj_widget_call_to_action_menu ul li a {
+	display: block;
+	padding: 0.5em;
+	word-break: normal;
+	color: white;
+	text-decoration: none;
+	font-weight: bold;
+	font-size:1.25em;
+}
+
+/* Style calls-to-action widget menu item link icons */
+.widget_gmuj_widget_call_to_action_menu ul li a span.fa {
+	color:#ffc733;
+	font-size:0.8em;
+	margin-left: 0.25em;
+}
+
+/*--- 500+ pixels ---*/
+@media screen and (min-width: 500px) {
+
+	/* Style calls-to-action widget menu */
+	.widget_gmuj_widget_call_to_action_menu ul {
+		display: flex;
+		justify-content: space-around;
+		align-items: flex-start;
+		flex-wrap: wrap;
+	}
+
+	/* Style calls-to-action widget menu items */
+	.widget_gmuj_widget_call_to_action_menu ul li {
+		flex: 1 1 0px;
+	}
+
+
+	/* Style calls-to-action widget menu item links */
+	.widget_gmuj_widget_call_to_action_menu ul li a {
+		padding: 0.5em 1em;
+	}
+
+}
+
+/*--- 700+ pixels ---*/
+@media screen and (min-width: 700px) {
+
+	/* Style calls-to-action widget menu item links */
+	.widget_gmuj_widget_call_to_action_menu ul li a {
+		padding: 0.5em 1em;
+	}
+
+}
+
+/*--- 1000+ pixels ---*/
+@media screen and (min-width: 1000px) {
+
+	/* Style calls-to-action widget menu item links */
+	.widget_gmuj_widget_call_to_action_menu ul li a {
+		padding: 2em 3em 0.5em 0.5em;
+	}
+
+	/* Style calls-to-action widget sub-titles, other than when used on the homepage banner */
+	ul.sidebar-homepage:not(#sidebar-homepage-banner) li.widget_gmuj_widget_call_to_action_menu p.widget-title-sub,
+	div.entry-content li.widget_gmuj_widget_call_to_action_menu p.widget-title-sub {
+		margin-bottom:1em;
+	}
+
+}
