--- a/css/custom-widgets-people-list.css
+++ b/css/custom-widgets-people-list.css
@@ -2,5 +2,15 @@
 
 /* Person list */
 
-/* Default and small screens */
-@import 'custom-widgets-people-list-default.css';
+/*--- Default and small screens ---*/
+
+/* Make the people listing images taller */
+li.widget_gmuj_widget_people_list img.widget_gmuj_widget_display_list_item_image {height:325px}
+
+/* Style person title heading */
+li.widget_gmuj_widget_people_list a.widget_gmuj_widget_display_list_item h4.person-title {
+    min-height:2em;
+    margin: 0.5em;
+    padding-bottom: 1em;
+    font-size:1em;
+}
