--- a/css/custom-widgets-recent-posts.css
+++ b/css/custom-widgets-recent-posts.css
@@ -2,5 +2,5 @@
 
 /* Recent posts */
 
-/* Default and small screens */
-@import 'custom-widgets-recent-posts-default.css';
+/*--- Default and small screens ---*/
+
