--- a/css/custom-widgets-regex-nav-menu.css
+++ b/css/custom-widgets-regex-nav-menu.css
@@ -2,8 +2,67 @@
 
 /* Regex nav menu */
 
-/* Default and small screens */
-@import 'custom-widgets-regex-nav-menu-default.css';
+/*--- Default and small screens ---*/
 
-/* 800+ pixels */
-@import 'custom-widgets-regex-nav-menu-800+.css' screen and (min-width: 800px);
+
+/* Style the nav menus in the sidebar */
+.gmuj-sidebar .widget_gmuj_widget_regex_nav_menu {
+	font-size: 0.9em;
+}
+
+.gmuj-sidebar .widget_gmuj_widget_regex_nav_menu li {
+	min-width: 12em;
+	background-color: #f1f2f3;
+	border-bottom: none;
+}
+
+/* Nav menu links  */
+.gmuj-sidebar .widget_gmuj_widget_regex_nav_menu li a {
+	color: #005239;
+	font-weight: normal;
+}
+
+/* Nav menu current page */
+.gmuj-sidebar .widget_gmuj_widget_regex_nav_menu li.current_page_item > a {
+	color: #114145;
+	font-weight: bold;
+}
+
+/* but different first child LI */
+/*
+.gmuj-sidebar .widget_gmuj_widget_regex_nav_menu ul.menu > li:first-child {
+	color: white;
+	background-color: #006940;
+	position: relative;
+}
+.gmuj-sidebar .widget_gmuj_widget_regex_nav_menu ul.menu > li:first-child a {
+	color: white;
+}
+.gmuj-sidebar .widget_gmuj_widget_regex_nav_menu ul.menu > li.current_page_item:first-child > a {
+	color: white;
+}
+*/
+
+/* Nav menu sub menus */
+.gmuj-sidebar .widget_gmuj_widget_regex_nav_menu .sub-menu li {
+	margin-left: 0;
+	padding-bottom: 0;
+}
+
+/*--- 800+ pixels ---*/
+@media screen and (min-width: 800px) {
+
+	/* extra visual element on navigation menu top links when active */
+	.gmuj-sidebar .widget_gmuj_widget_regex_nav_menu ul.menu > li.current_page_item:first-child > a::after {
+	    display: inline-block;
+	    position: absolute;
+	    top: 50%;
+	    right: 0;
+	    content: '';
+	    border: 3px solid #006940;
+	    background-color: #006940;
+	    transform: rotate(45deg) translate(0, -50%);
+	    padding: 3px;
+	}
+
+}
